--- a/practice_vi.ipynb
+++ b/practice_vi.ipynb
@@ -157,7 +157,7 @@
       "metadata": {
         "id": "fOsoUYEyHm4t",
         "colab_type": "code",
-        "outputId": "1d82921a-bbf9-47f8-8283-56bb2f5d5d12",
+        "outputId": "d08b5ea6-cfcc-4760-a361-ef044df4a57c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -168,7 +168,7 @@
         "next_state, reward, done, info = mdp.step('a1')\n",
         "print('next_state = %s, reward = %s, done = %s' % (next_state, reward, done))"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,10 +195,10 @@
       "metadata": {
         "id": "tQobtaQZHm4w",
         "colab_type": "code",
-        "outputId": "d1db988f-034c-4a61-a153-08260e4e0977",
+        "outputId": "336f341a-9784-4b4f-ba4f-38e8dd26c771",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 104
+          "height": 105
         }
       },
       "source": [
@@ -208,7 +208,7 @@
         "print(\"mdp.get_reward('s1', 'a0', 's0') = \", mdp.get_reward('s1', 'a0', 's0'))\n",
         "print(\"mdp.get_transition_prob('s1', 'a0', 's0') = \", mdp.get_transition_prob('s1', 'a0', 's0'))"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,7 +269,14 @@
       "source": [
         "def get_action_value(mdp, state_values, state, action, gamma):\n",
         "    \"\"\" Computes Q(s,a) as in formula above \"\"\"\n",
-        "    <YOUR CODE>\n",
+        "    Q = 0.0\n",
+        "\n",
+        "    for next_state, next_state_value in state_values.items():\n",
+        "        prob = mdp.get_transition_prob(state, action, next_state)\n",
+        "        reward = mdp.get_reward( state, action, next_state)\n",
+        "\n",
+        "        Q += (prob) * (reward + gamma * next_state_value)\n",
+        "\n",
         "    return Q"
       ],
       "execution_count": 0,
