--- a/practice_vi.ipynb
+++ b/practice_vi.ipynb
@@ -320,9 +320,17 @@
       "source": [
         "def get_new_state_value(mdp, state_values, state, gamma):\n",
         "    \"\"\" Computes next V(s) as per formula above. Please do not change state_values in process. \"\"\"\n",
-        "    if mdp.is_terminal(state): return 0\n",
-        "    \n",
-        "    return  <YOUR CODE>"
+        "    if mdp.is_terminal(state):\n",
+        "        return 0\n",
+        "\n",
+        "    best = float('-inf')\n",
+        "    for action in mdp.get_possible_actions(state):\n",
+        "        value = get_action_value(mdp, state_values, state, action, gamma)\n",
+        "\n",
+        "        if value > best:\n",
+        "            best = value\n",
+        "\n",
+        "    return best\n"
       ],
       "execution_count": 0,
       "outputs": []
