--- a/practice_vi.ipynb
+++ b/practice_vi.ipynb
@@ -597,9 +597,17 @@
         "    \"\"\" Finds optimal action using formula above. \"\"\"\n",
         "    if mdp.is_terminal(state):\n",
         "        return None\n",
-        "    \n",
-        "    <YOUR CODE>\n",
-        "    return <YOUR CODE>"
+        "\n",
+        "    best_action = None\n",
+        "    best_action_value = float('-inf')\n",
+        "    for action in mdp.get_possible_actions(state):\n",
+        "        action_value = get_action_value(mdp, state_values, state, action, gamma)\n",
+        "\n",
+        "        if action_value > best_action_value:\n",
+        "            best_action_value = action_value\n",
+        "            best_action = action\n",
+        "\n",
+        "    return best_action\n"
       ],
       "execution_count": 0,
       "outputs": []
