--- a/practice_vi.ipynb
+++ b/practice_vi.ipynb
@@ -318,7 +318,7 @@
         "colab": {}
       },
       "source": [
-        "def (mdp, state_values, state, gamma):\n",
+        "def get_new_state_value(mdp, state_values, state, gamma):\n",
         "    \"\"\" Computes next V(s) as per formula above. Please do not change state_values in process. \"\"\"\n",
         "    if mdp.is_terminal(state):\n",
         "        return 0\n",
@@ -689,7 +689,11 @@
       "metadata": {
         "id": "ntpuKbjDHm5Q",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        },
+        "outputId": "76312d49-7f83-4f09-c7f2-8c64f9968e02"
       },
       "source": [
         "from mdp import FrozenLakeEnv\n",
@@ -697,8 +701,20 @@
         "\n",
         "mdp.render()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "*FFF\n",
+            "FHFH\n",
+            "FFFH\n",
+            "HFFG\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -715,7 +731,7 @@
         "\n",
         "        # Compute new state values using the functions you defined above.\n",
         "        # It must be a dict {state : new_V(state)}\n",
-        "        new_state_values = <YOUR CODE>\n",
+        "        new_state_values = {s: get_new_state_value(mdp, state_values, s, gamma) for s in state_values.keys()}\n",
         "        assert isinstance(new_state_values, dict)\n",
         "\n",
         "        # Compute difference\n",
@@ -737,20 +753,43 @@
       "metadata": {
         "id": "utuuAdQuHm5V",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        },
+        "outputId": "6a5e88c0-01d3-487e-b615-9a84c4667796"
       },
       "source": [
         "state_values = value_iteration(mdp)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "iter    0   |   diff: 1.00000   |   V(start): 0.000 \n",
+            "iter    1   |   diff: 0.90000   |   V(start): 0.000 \n",
+            "iter    2   |   diff: 0.81000   |   V(start): 0.000 \n",
+            "iter    3   |   diff: 0.72900   |   V(start): 0.000 \n",
+            "iter    4   |   diff: 0.65610   |   V(start): 0.000 \n",
+            "iter    5   |   diff: 0.59049   |   V(start): 0.590 \n",
+            "iter    6   |   diff: 0.00000   |   V(start): 0.590 \n",
+            "Terminated\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "P32-8VkpHm5Z",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 852
+        },
+        "outputId": "1c135285-55c2-4bbb-a603-fb1bc54b7d70"
       },
       "source": [
         "s = mdp.reset()\n",
@@ -762,8 +801,62 @@
         "    mdp.render()\n",
         "    if done: break"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "*FFF\n",
+            "FHFH\n",
+            "FFFH\n",
+            "HFFG\n",
+            "\n",
+            "down\n",
+            "\n",
+            "SFFF\n",
+            "*HFH\n",
+            "FFFH\n",
+            "HFFG\n",
+            "\n",
+            "down\n",
+            "\n",
+            "SFFF\n",
+            "FHFH\n",
+            "*FFH\n",
+            "HFFG\n",
+            "\n",
+            "right\n",
+            "\n",
+            "SFFF\n",
+            "FHFH\n",
+            "F*FH\n",
+            "HFFG\n",
+            "\n",
+            "down\n",
+            "\n",
+            "SFFF\n",
+            "FHFH\n",
+            "FFFH\n",
+            "H*FG\n",
+            "\n",
+            "right\n",
+            "\n",
+            "SFFF\n",
+            "FHFH\n",
+            "FFFH\n",
+            "HF*G\n",
+            "\n",
+            "right\n",
+            "\n",
+            "SFFF\n",
+            "FHFH\n",
+            "FFFH\n",
+            "HFF*\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
