--- a/sarsa_exercise.ipynb
+++ b/sarsa_exercise.ipynb
@@ -52,6 +52,7 @@
         "import random, math\n",
         "import numpy as np\n",
         "\n",
+        "\n",
         "class QLearningAgent:\n",
         "    def __init__(self, alpha, epsilon, discount, get_legal_actions):\n",
         "        \"\"\"\n",
@@ -70,7 +71,7 @@
         "            which sets Q(state,action) := value\n",
         "\n",
         "        !!!Important!!!\n",
-        "        Note: please avoid using self._qValues directly. \n",
+        "        Note: please avoid using self._qValues directly.\n",
         "            There's a special self.get_qvalue/set_qvalue for that.\n",
         "        \"\"\"\n",
         "\n",
@@ -84,11 +85,11 @@
         "        \"\"\" Returns Q(state,action) \"\"\"\n",
         "        return self._qvalues[state][action]\n",
         "\n",
-        "    def set_qvalue(self,state,action,value):\n",
+        "    def set_qvalue(self, state, action, value):\n",
         "        \"\"\" Sets the Qvalue for [state,action] to the given value \"\"\"\n",
         "        self._qvalues[state][action] = value\n",
         "\n",
-        "    #---------------------START OF YOUR CODE---------------------#\n",
+        "    # ---------------------START OF YOUR CODE---------------------#\n",
         "\n",
         "    def get_value(self, state):\n",
         "        \"\"\"\n",
@@ -98,11 +99,14 @@
         "        \"\"\"\n",
         "        possible_actions = self.get_legal_actions(state)\n",
         "\n",
-        "        #If there are no legal actions, return 0.0\n",
+        "        # If there are no legal actions, return 0.0\n",
         "        if len(possible_actions) == 0:\n",
         "            return 0.0\n",
+        "\n",
         "        actions = self.get_legal_actions(state)\n",
-        "        value = <YOUR CODE> (hint: use max)\n",
+        "        #1111\n",
+        "        value = max([self.get_qvalue(state, action) for action in actions])  # < YOURCODE > (hint: use max)\n",
+        "        # 1111\n",
         "\n",
         "        return value\n",
         "\n",
@@ -112,56 +116,68 @@
         "           Q(s,a) := (1 - alpha) * Q(s,a) + alpha * (r + gamma * V(s'))\n",
         "        \"\"\"\n",
         "\n",
-        "        #agent parameters\n",
+        "        # agent parameters\n",
         "        gamma = self.discount\n",
         "        learning_rate = self.alpha\n",
-        "        next_value = <YOUR CODE>\n",
-        "        Qsa =  self.get_qvalue(state, action)\n",
-        "        Qsa = <YOUR CODE TO UPDATE Qsa>\n",
-        "        \n",
+        "        next_value = self.get_value(next_state) #< YOUR CODE >\n",
+        "        Qsa = self.get_qvalue(state, action)\n",
+        "        #222\n",
+        "        Qsa = ((1 - learning_rate) * Qsa) + learning_rate * (reward + gamma * next_value) #< YOUR CODE TO UPDATE Qsa >\n",
+        "        # 222\n",
+        "\n",
         "        self.set_qvalue(state, action, Qsa)\n",
         "\n",
-        "    \n",
         "    def get_best_action(self, state):\n",
         "        \"\"\"\n",
-        "        Compute the best action to take in a state (using current q-values). \n",
+        "        Compute the best action to take in a state (using current q-values).\n",
         "        \"\"\"\n",
         "        possible_actions = self.get_legal_actions(state)\n",
         "\n",
-        "        #If there are no legal actions, return None\n",
+        "        # If there are no legal actions, return None\n",
         "        if len(possible_actions) == 0:\n",
         "            return None\n",
         "\n",
-        "        best_action = <YOUR CODE, HINT: MAX CAN GET KEY AS PARAMETER>\n",
+        "\n",
+        "        best_action_index = np.argmax([self.get_qvalue(state, action) for action in possible_actions])\n",
+        "        #333\n",
+        "        best_action = possible_actions[best_action_index]\n",
+        "        # 333\n",
+        "        # best_action = < YOUR CODE, HINT: MAX  CAN GET  KEY  AS  PARAMETER >\n",
         "\n",
         "        return best_action\n",
         "\n",
         "    def get_action(self, state):\n",
         "        \"\"\"\n",
-        "        Compute the action to take in the current state, including exploration.  \n",
+        "        Compute the action to take in the current state, including exploration.\n",
         "        With probability self.epsilon, we should take a random action.\n",
         "            otherwise - the best policy action (self.getPolicy).\n",
-        "        \n",
-        "        Note: To pick randomly from a list, use random.choice(list). \n",
+        "\n",
+        "        Note: To pick randomly from a list, use random.choice(list).\n",
         "              To pick True or False with a given probablity, generate uniform number in [0, 1]\n",
         "              and compare it with your probability\n",
         "        \"\"\"\n",
         "\n",
         "        # Pick Action\n",
         "        possible_actions = self.get_legal_actions(state)\n",
-        "        action = <YOUR CODE for best action, hint self.get_best_action>\n",
+        "        #\n",
+        "        #action = < YOUR CODE for best action, hint self.get_best_action >\n",
+        "        #\n",
         "\n",
-        "        #If there are no legal actions, return None\n",
+        "        action = self.get_best_action(state)\n",
+        "\n",
+        "        # If there are no legal actions, return None\n",
         "        if len(possible_actions) == 0:\n",
         "            return None\n",
         "\n",
-        "        #agent parameters:\n",
+        "        # agent parameters:\n",
         "        epsilon = self.epsilon\n",
         "\n",
-        "        if random.random()<epsilon:\n",
-        "            chosen_action = <YOUR_CODE HINT: random.choice> \n",
+        "        if random.random() < epsilon:\n",
+        "            action_index = np.random.choice(len(possible_actions))\n",
+        "            chosen_action = possible_actions[action_index]\n",
         "        else:\n",
         "            chosen_action = action\n",
+        "\n",
         "        return chosen_action"
       ],
       "execution_count": 0,
