--- a/sarsa_exercise.ipynb
+++ b/sarsa_exercise.ipynb
@@ -544,8 +544,11 @@
       "metadata": {
         "id": "z5dUwiddGyrJ",
         "colab_type": "code",
-        "outputId": "8e56460c-9869-443e-89ff-3361d477dbfb",
-        "colab": {}
+        "outputId": "1b9c3d90-70cb-44f6-a672-85387b9750c0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 194
+        }
       },
       "source": [
         "print(\"Q-Learning\")\n",
@@ -554,13 +557,13 @@
         "print(\"SARSA\")\n",
         "draw_policy(env, agent_sarsa)"
       ],
-      "execution_count": 0,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Q-Learning\n",
-            " >  >  >  v  v  v  v  >  >  >  >  v \n",
+            " v  v  v  v  >  >  v  >  v  >  v  v \n",
             " >  >  >  >  >  >  >  >  >  >  >  v \n",
             " >  >  >  >  >  >  >  >  >  >  >  v \n",
             " X  C  C  C  C  C  C  C  C  C  C  T \n",
@@ -596,6 +599,16 @@
         "* Expected Value SASRSA for softmax policy:\n",
         "$$ \\pi(a_i|s) = softmax({Q(s,a_i) \\over \\tau}) = {e ^ {Q(s,a_i)/ \\tau}  \\over {\\sum_{a_j}  e ^{Q(s,a_j) / \\tau }}} $$\n",
         "* Implement N-step algorithms and TD($\\lambda$): see [Sutton's book](http://incompleteideas.net/book/bookdraft2018jan1.pdf) chapter 7 and chapter 12."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aFsVimmj_RpF",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q learnning is choosing the next state in greedy way ( for the q value update) and SARSA is following the policy for that"
       ]
     }
   ]
