--- a/sarsa_exercise.ipynb
+++ b/sarsa_exercise.ipynb
@@ -291,7 +291,7 @@
         "\n",
         "print(env.__doc__)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,7 +336,7 @@
         "# Agent can choose to go as close to the cliff as it wishes. x:start, T:exit, C:cliff, o: flat ground\n",
         "env.render()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,18 +356,18 @@
       "metadata": {
         "id": "ZqQ3NajevQCA",
         "colab_type": "code",
+        "outputId": "5651a0f1-c9e7-49dc-9b4e-b17cda3db513",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 194
-        },
-        "outputId": "5651a0f1-c9e7-49dc-9b4e-b17cda3db513"
+        }
       },
       "source": [
         "#pip install nesgym-super-mario-bros\n",
         "#!pip install qlearning\n",
         "!pip install pyqlearning"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,11 +445,11 @@
       "metadata": {
         "id": "1JWlfcaU2pSM",
         "colab_type": "code",
+        "outputId": "fc354cae-ef1d-4830-99fe-f3188b9e6fb0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 316
-        },
-        "outputId": "fc354cae-ef1d-4830-99fe-f3188b9e6fb0"
+        }
       },
       "source": [
         "from IPython.display import clear_output\n",
@@ -476,7 +476,7 @@
         "        plt.show()\n",
         "        "
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -557,7 +557,7 @@
         "print(\"SARSA\")\n",
         "draw_policy(env, agent_sarsa)"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -608,7 +608,13 @@
         "colab_type": "text"
       },
       "source": [
-        "Q learnning is choosing the next state in greedy way ( for the q value update) and SARSA is following the policy for that"
+        "1. Q learnning is choosing the next state in greedy way ( for the q value update) and SARSA is following the policy for that\n",
+        "\n",
+        "2. When is considresing the best action and the second the actual policy during the learnning \n",
+        "\n",
+        "3. Q- learnning is consideraing the best action instead of the actual action so I thnk it will be beteer if we will have lesss randomness and it will consider the actual choice.\n",
+        "\n",
+        "4. I would use q-learnning when the action that I wil actually take is usually the best action - when the expected reward is close to the best reward\n"
       ]
     }
   ]
