--- a/rl_exercise_0.ipynb
+++ b/rl_exercise_0.ipynb
@@ -59,7 +59,11 @@
       "metadata": {
         "id": "j1i4BLs7Ddfr",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 230
+        },
+        "outputId": "cc501cd9-2744-4cfa-f8ee-e7a38031a8bd"
       },
       "source": [
         "import torch\n",
@@ -68,7 +72,17 @@
         "class OurModule(nn.Module):\n",
         "    def __init__(self, num_inputs, num_classes, dropout_prob=0.3):\n",
         "        super(OurModule, self).__init__()\n",
-        "        self.pipe = #your code here\n",
+        "        self.pipe = nn.Sequential(\n",
+        "            nn.Linear(num_inputs, 5),\n",
+        "            nn.ReLU(True),\n",
+        "\n",
+        "            nn.Linear(5, 20),\n",
+        "            nn.ReLU(True),\n",
+        "            nn.Linear(20, num_classes),\n",
+        "            nn.Dropout(dropout_prob),\n",
+        "            nn.Softmax(1)\n",
+        "        )\n",
+        "\n",
         "\n",
         "    def forward(self, x):\n",
         "        return self.pipe(x)\n",
@@ -80,8 +94,27 @@
         "    out = net(v)\n",
         "    print(out)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "OurModule(\n",
+            "  (pipe): Sequential(\n",
+            "    (0): Linear(in_features=2, out_features=5, bias=True)\n",
+            "    (1): ReLU(inplace)\n",
+            "    (2): Linear(in_features=5, out_features=20, bias=True)\n",
+            "    (3): ReLU(inplace)\n",
+            "    (4): Linear(in_features=20, out_features=3, bias=True)\n",
+            "    (5): Dropout(p=0.3)\n",
+            "    (6): Softmax()\n",
+            "  )\n",
+            ")\n",
+            "tensor([[0.3396, 0.3325, 0.3278]], grad_fn=<SoftmaxBackward>)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -104,7 +137,7 @@
       "metadata": {
         "id": "l9zfNlhkM0Lc",
         "colab_type": "code",
-        "outputId": "70547ca6-4531-406a-d047-9198f8145f5a",
+        "outputId": "cf6de575-5188-4e8b-99cd-c7e9103c1072",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -113,7 +146,7 @@
       "source": [
         "print(\"Cuda's availability is %s\" % torch.cuda.is_available())"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,10 +172,10 @@
       "metadata": {
         "id": "VLCbQ6YHU8jI",
         "colab_type": "code",
-        "outputId": "9d1c3e5f-2ad0-4072-c3b6-034340ee8ddd",
+        "outputId": "030d0ddb-e5d0-4a3c-88ec-1135d135b141",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 52
         }
       },
       "source": [
@@ -151,7 +184,7 @@
         "print(v.to('cuda'))\n",
         "print(v.cuda())"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
