--- a/rl_exercise_0.ipynb
+++ b/rl_exercise_0.ipynb
@@ -226,10 +226,10 @@
       "metadata": {
         "id": "doN_dizVIsck",
         "colab_type": "code",
-        "outputId": "ffe40e0d-1574-41fc-a3c4-ffa0d2cc7fa9",
+        "outputId": "9a03dfad-d9c9-46f8-b209-8fff14f295fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 258
+          "height": 158
         }
       },
       "source": [
@@ -239,36 +239,19 @@
         "from tensorboardcolab import TensorBoardColab\n",
         "tbc=TensorBoardColab(graph_path=LOG_DIR)\n"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Collecting tensorboardX\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/5c/76/89dd44458eb976347e5a6e75eb79fecf8facd46c1ce259bad54e0044ea35/tensorboardX-1.6-py2.py3-none-any.whl (129kB)\n",
-            "\u001b[K    100% |████████████████████████████████| 133kB 39.2MB/s \n",
-            "\u001b[?25hRequirement already satisfied: protobuf>=3.2.0 in /usr/local/lib/python3.6/dist-packages (from tensorboardX) (3.7.1)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from tensorboardX) (1.16.2)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from tensorboardX) (1.11.0)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from protobuf>=3.2.0->tensorboardX) (40.9.0)\n",
-            "Installing collected packages: tensorboardX\n",
-            "Successfully installed tensorboardX-1.6\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
+            "Requirement already satisfied: tensorboardX in /usr/local/lib/python3.6/dist-packages (1.7)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from tensorboardX) (1.16.3)\n",
+            "Requirement already satisfied: protobuf>=3.2.0 in /usr/local/lib/python3.6/dist-packages (from tensorboardX) (3.7.1)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from tensorboardX) (1.12.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from protobuf>=3.2.0->tensorboardX) (41.0.1)\n",
             "Wait for 8 seconds...\n",
             "TensorBoard link:\n",
-            "https://093da28f.ngrok.io\n"
+            "https://acf2d6ab.ngrok.io\n"
           ],
           "name": "stdout"
         }
@@ -302,15 +285,18 @@
         "\n",
         "\n",
         "if __name__ == \"__main__\":\n",
-        "    writer = #CREATE A SUMMARY WRITE INSTANCE \n",
+        "    writer = SummaryWriter(logdir=LOG_DIR)\n",
+        "\n",
         "    funcs = {\"sin\": math.sin, \"cos\": math.cos, \"tan\": math.tan}\n",
         "\n",
-        "    for angle in #YOUR CODE:\n",
+        "    for angle in range(-360, 360):\n",
         "        angle_rad = angle * math.pi / 180\n",
         "        for name, fun in funcs.items():\n",
         "            val = fun(angle_rad)\n",
-        "            #USE WRITER TO REPORT A SCALAR \n",
-        "    writer.close()"
+        "\n",
+        "            writer.add_scalar(name, val)\n",
+        "    writer.close()\n",
+        "    "
       ],
       "execution_count": 0,
       "outputs": []
