--- a/rl_exercise_0.ipynb
+++ b/rl_exercise_0.ipynb
@@ -59,11 +59,11 @@
       "metadata": {
         "id": "j1i4BLs7Ddfr",
         "colab_type": "code",
+        "outputId": "1db61293-4787-4073-fca4-13c7dbf02089",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 230
-        },
-        "outputId": "cc501cd9-2744-4cfa-f8ee-e7a38031a8bd"
+        }
       },
       "source": [
         "import torch\n",
@@ -94,7 +94,7 @@
         "    out = net(v)\n",
         "    print(out)"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
             "    (6): Softmax()\n",
             "  )\n",
             ")\n",
-            "tensor([[0.3396, 0.3325, 0.3278]], grad_fn=<SoftmaxBackward>)\n"
+            "tensor([[0.3073, 0.3474, 0.3453]], grad_fn=<SoftmaxBackward>)\n"
           ],
           "name": "stdout"
         }
@@ -146,7 +146,7 @@
       "source": [
         "print(\"Cuda's availability is %s\" % torch.cuda.is_available())"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,7 +172,7 @@
       "metadata": {
         "id": "VLCbQ6YHU8jI",
         "colab_type": "code",
-        "outputId": "030d0ddb-e5d0-4a3c-88ec-1135d135b141",
+        "outputId": "27306324-04b7-4b43-d1a3-3f132567ebea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -226,10 +226,10 @@
       "metadata": {
         "id": "doN_dizVIsck",
         "colab_type": "code",
-        "outputId": "9a03dfad-d9c9-46f8-b209-8fff14f295fa",
+        "outputId": "b13498d6-a4e6-445b-cc01-78292c5f944d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 158
+          "height": 247
         }
       },
       "source": [
@@ -239,19 +239,36 @@
         "from tensorboardcolab import TensorBoardColab\n",
         "tbc=TensorBoardColab(graph_path=LOG_DIR)\n"
       ],
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: tensorboardX in /usr/local/lib/python3.6/dist-packages (1.7)\n",
+            "Collecting tensorboardX\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/a2/57/2f0a46538295b8e7f09625da6dd24c23f9d0d7ef119ca1c33528660130d5/tensorboardX-1.7-py2.py3-none-any.whl (238kB)\n",
+            "\u001b[K     |████████████████████████████████| 245kB 2.8MB/s \n",
+            "\u001b[?25hRequirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from tensorboardX) (1.12.0)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from tensorboardX) (1.16.3)\n",
             "Requirement already satisfied: protobuf>=3.2.0 in /usr/local/lib/python3.6/dist-packages (from tensorboardX) (3.7.1)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from tensorboardX) (1.12.0)\n",
             "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from protobuf>=3.2.0->tensorboardX) (41.0.1)\n",
+            "Installing collected packages: tensorboardX\n",
+            "Successfully installed tensorboardX-1.7\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
             "Wait for 8 seconds...\n",
             "TensorBoard link:\n",
-            "https://acf2d6ab.ngrok.io\n"
+            "http://7be5d865.ngrok.io\n"
           ],
           "name": "stdout"
         }
@@ -340,7 +357,11 @@
       "metadata": {
         "id": "wgXYZQWuQ0mK",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 238
+        },
+        "outputId": "27958278-84ce-4937-ae1d-d735126c6d73"
       },
       "source": [
         "import sys; sys.argv=['']; del sys # without this argparse won't work properly. https://github.com/spyder-ide/spyder/issues/3883 \n",
@@ -353,12 +374,26 @@
         "      return input.view(input.size(0), -1)\n",
         "\n",
         "class Net(nn.Module):\n",
-        "  def __init__(self):\n",
-        "      super(Net, self).__init__()\n",
-        "      self.net = None\n",
+        "    def __init__(self,):\n",
+        "        super(Net, self).__init__()\n",
+        "        self.net = \\\n",
+        "            nn.Sequential(\n",
+        "                        nn.ReLU(),\n",
+        "                        nn.Conv2d(1, 20, 5, stride=1),\n",
+        "                        #nn.ReLU(),\n",
+        "                         nn.MaxPool2d(2, stride=2),\n",
+        "                         nn.ReLU(),\n",
+        "                         nn.Conv2d(20, 50, 5, stride=1),\n",
+        "                         nn.MaxPool2d(2, stride=2),\n",
+        "                         Flatten(),\n",
+        "                         nn.Linear(800, 500),\n",
+        "                         nn.Linear(500, 10)\n",
+        "                          )\n",
         "\n",
-        "  def forward(self, x):\n",
-        "      return self.net(x)\n",
+        "    def forward(self, x):\n",
+        "        return self.net(x)\n",
+        "\n",
+        "      \n",
         "    \n",
         "def get_loader(train, batch_size, use_cuda):\n",
         "  kwargs = {'num_workers': 1, 'pin_memory': True} if use_cuda else {}\n",
@@ -376,11 +411,56 @@
         "      **kwargs)\n",
         "  return loader\n",
         "\n",
-        "def train(model, device, train_loader, optimizer, epoch, writer):\n",
-        "  raise NotImplemented\n",
+        "\n",
+        "def train(model, device, train_loader, optimizer, epoch, writer, criterion):\n",
+        "    model.train()\n",
+        "    running_loss = 0.0\n",
+        "    running_correct = 0.0\n",
+        "    calc_count = 0.0\n",
+        "\n",
+        "    for images, labels in train_loader:\n",
+        "        device = labels.to(device)\n",
+        "        labels = labels.to(labels)\n",
+        "        optimizer.zero_grad()\n",
+        "\n",
+        "        images = Variable(images)\n",
+        "        labels = Variable(labels)\n",
+        "\n",
+        "        output = model(images)\n",
+        "        calc_count += output.data.shape[0]\n",
+        "\n",
+        "        _, pred = torch.max(output.data, 1)\n",
+        "        loss = criterion(output, labels)\n",
+        "        running_correct += torch.sum(pred == labels.data).cpu().numpy().item()\n",
+        "        running_loss += loss.item()\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "\n",
+        "    return round(running_loss / calc_count, 4), round(running_correct / calc_count, 4)\n",
+        "\n",
+        "\n",
         "  \n",
-        "def test(model, device, test_loader, epoch, writer):\n",
-        "  raise NotImplemented\n",
+        "def test(model, device, test_loader, epoch, writer, criterion):\n",
+        "    model.eval()\n",
+        "    running_correct = 0.0\n",
+        "    running_loss = 0.0\n",
+        "    calc_count = 0.0\n",
+        "\n",
+        "    with torch.no_grad():\n",
+        "        for images, labels in test_loader:\n",
+        "            device = labels.to(device)\n",
+        "            labels = labels.to(labels)\n",
+        "            images = Variable(images)\n",
+        "            labels = Variable(labels)\n",
+        "            outputs = model(images)\n",
+        "            _, pred = torch.max(outputs.data, 1)\n",
+        "            loss = criterion(outputs, labels)\n",
+        "            calc_count += outputs.data.shape[0]\n",
+        "            running_correct += torch.sum(pred == labels.data).cpu().numpy().item()\n",
+        "            running_loss += loss.item()\n",
+        "\n",
+        "    return round(running_loss / calc_count, 4), round(running_correct / calc_count, 4)\n",
+        "  \n",
         "  \n",
         "def get_args():\n",
         "  parser = argparse.ArgumentParser(description='PyTorch MNIST Example')\n",
@@ -408,26 +488,53 @@
         "\n",
         "def main():\n",
         "    args = get_args()\n",
+        "\n",
         "    use_cuda = torch.cuda.is_available()\n",
-        "    print('use_cuda = {}'.format(use_cuda))\n",
-        "    device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
         "\n",
         "    torch.manual_seed(args.seed)\n",
+        "\n",
+        "    if use_cuda:\n",
+        "        torch.cuda.manual_seed(args.seed)\n",
+        "        torch.cuda.manual_seed_all(args.seed)\n",
+        "\n",
+        "\n",
+        "    print('use_cuda = {}'.format(use_cuda))\n",
+        "    device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
+        "    criterion = nn.CrossEntropyLoss().to(device)\n",
+        "    torch.manual_seed(args.seed)\n",
         "    now = datetime.now()\n",
-        "    writer = SummaryWriter(log_dir=LOG_DIR + '/nminst_' + now.strftime(\"%Y%m%d-%H%M%S\"))\n",
+        "    #writer = SummaryWriter(log_dir=LOG_DIR + '/nminst_' + now.strftime(\"%Y%m%d-%H%M%S\"))\n",
+        "    writer = None\n",
         "\n",
         "    train_loader = get_loader(train=True, batch_size=args.batch_size, use_cuda=use_cuda)\n",
         "    test_loader = get_loader(train=False, batch_size=args.test_batch_size, use_cuda=use_cuda)\n",
         "    model = Net().to(device)\n",
-        "    optimizer = # ADD THIS\n",
-        "    \n",
+        "    optimizer = torch.optim.SGD(model.parameters(), lr=args.lr, momentum= args.momentum)\n",
+        "\n",
+        "\n",
         "    for epoch in range(1, args.epochs + 1):\n",
         "        print('epoch={}'.format(epoch))\n",
-        "        train(model, device, train_loader, optimizer, epoch, writer)\n",
-        "        test(model, device, test_loader, epoch, writer)\n"
+        "        train_loss, train_correct = train(model, device, train_loader, optimizer, epoch, writer, criterion)\n",
+        "        print('train {0} - {1}'.format(train_loss, train_correct))\n",
+        "        test_loss, test_correct = test(model, device, test_loader, epoch, writer, criterion)\n",
+        "\n",
+        "        print('test {0} - {1}'.format(test_loss, test_correct))\n",
+        "\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-9a9c9b09a7eb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mFlatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mModule\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'nn' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
