--- a/rl_exercise_0.ipynb
+++ b/rl_exercise_0.ipynb
@@ -355,13 +355,25 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "5pf-xTiFemMJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import argparse\n",
+        "from datetime import datetime\n",
+        "from torchvision import datasets,transforms\n",
+        "from torch.autograd import Variable\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "wgXYZQWuQ0mK",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 238
-        },
-        "outputId": "27958278-84ce-4937-ae1d-d735126c6d73"
+        "colab": {}
       },
       "source": [
         "import sys; sys.argv=['']; del sys # without this argparse won't work properly. https://github.com/spyder-ide/spyder/issues/3883 \n",
@@ -373,14 +385,13 @@
         "  def forward(self, input):\n",
         "      return input.view(input.size(0), -1)\n",
         "\n",
-        "class Net(nn.Module):\n",
+        "class Net1(nn.Module):\n",
         "    def __init__(self,):\n",
-        "        super(Net, self).__init__()\n",
+        "        super(Net1, self).__init__()\n",
         "        self.net = \\\n",
         "            nn.Sequential(\n",
         "                        nn.ReLU(),\n",
         "                        nn.Conv2d(1, 20, 5, stride=1),\n",
-        "                        #nn.ReLU(),\n",
         "                         nn.MaxPool2d(2, stride=2),\n",
         "                         nn.ReLU(),\n",
         "                         nn.Conv2d(20, 50, 5, stride=1),\n",
@@ -396,8 +407,9 @@
         "      \n",
         "    \n",
         "def get_loader(train, batch_size, use_cuda):\n",
-        "  kwargs = {'num_workers': 1, 'pin_memory': True} if use_cuda else {}\n",
-        "\n",
+        "  #kwargs = {'num_workers': 1, 'pin_memory': True} if use_cuda else {}\n",
+        "  kwargs = {'num_workers': 1, 'pin_memory': True, 'drop_last': True} if use_cuda else {}\n",
+        "  \n",
         "  loader = torch.utils.data.DataLoader(\n",
         "    datasets.MNIST('../data', \n",
         "                   train=train, \n",
@@ -413,22 +425,23 @@
         "\n",
         "\n",
         "def train(model, device, train_loader, optimizer, epoch, writer, criterion):\n",
+        "    print(1)\n",
         "    model.train()\n",
         "    running_loss = 0.0\n",
         "    running_correct = 0.0\n",
         "    calc_count = 0.0\n",
         "\n",
         "    for images, labels in train_loader:\n",
-        "        device = labels.to(device)\n",
-        "        labels = labels.to(labels)\n",
+        "        \n",
+        "        images = images.to(device)\n",
+        "        labels = labels.to(device)\n",
         "        optimizer.zero_grad()\n",
         "\n",
         "        images = Variable(images)\n",
         "        labels = Variable(labels)\n",
-        "\n",
+        "        \n",
         "        output = model(images)\n",
         "        calc_count += output.data.shape[0]\n",
-        "\n",
         "        _, pred = torch.max(output.data, 1)\n",
         "        loss = criterion(output, labels)\n",
         "        running_correct += torch.sum(pred == labels.data).cpu().numpy().item()\n",
@@ -448,11 +461,13 @@
         "\n",
         "    with torch.no_grad():\n",
         "        for images, labels in test_loader:\n",
-        "            device = labels.to(device)\n",
-        "            labels = labels.to(labels)\n",
+        "            images = images.to(device)\n",
+        "            labels = labels.to(device)\n",
+        "            \n",
         "            images = Variable(images)\n",
         "            labels = Variable(labels)\n",
         "            outputs = model(images)\n",
+        "            \n",
         "            _, pred = torch.max(outputs.data, 1)\n",
         "            loss = criterion(outputs, labels)\n",
         "            calc_count += outputs.data.shape[0]\n",
@@ -508,7 +523,7 @@
         "\n",
         "    train_loader = get_loader(train=True, batch_size=args.batch_size, use_cuda=use_cuda)\n",
         "    test_loader = get_loader(train=False, batch_size=args.test_batch_size, use_cuda=use_cuda)\n",
-        "    model = Net().to(device)\n",
+        "    model = Net1().to(device)\n",
         "    optimizer = torch.optim.SGD(model.parameters(), lr=args.lr, momentum= args.momentum)\n",
         "\n",
         "\n",
@@ -521,18 +536,53 @@
         "        print('test {0} - {1}'.format(test_loss, test_correct))\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qi_YIudUedXo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 425
+        },
+        "outputId": "7413c95f-720d-4c78-d891-54131e18f6ea"
+      },
+      "source": [
+        "main()\n"
+      ],
+      "execution_count": 0,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-9a9c9b09a7eb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mFlatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mModule\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'nn' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "use_cuda = True\n",
+            "epoch=1\n",
+            "1\n",
+            "train 0.0051 - 0.9051\n",
+            "test 0.0001 - 0.967\n",
+            "epoch=2\n",
+            "1\n",
+            "train 0.0016 - 0.9699\n",
+            "test 0.0001 - 0.9767\n",
+            "epoch=3\n",
+            "1\n",
+            "train 0.0012 - 0.9772\n",
+            "test 0.0001 - 0.9807\n",
+            "epoch=4\n",
+            "1\n",
+            "train 0.001 - 0.9813\n",
+            "test 0.0 - 0.984\n",
+            "epoch=5\n",
+            "1\n",
+            "train 0.0008 - 0.9839\n",
+            "test 0.0 - 0.9854\n",
+            "epoch=6\n",
+            "1\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
